baml_language/crates/baml_tests/snapshots/diagnostic_errors/builtin_io/baml_tests__diagnostic_errors__builtin_io__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.ReadFile() -> string throws never {
  { : string
    let f = baml.fs.open("example.txt", "r") : baml.fs.File
    f.text() : string
  }
}
function user.ReadFileInline() -> string throws never {
  { : string
    baml.fs.open("data.json", "r").text() : string
  }
}
function user.ReadMultipleFiles() -> string throws never {
  { : string
    let f1 = baml.fs.open("file1.txt", "r") : baml.fs.File
    let f2 = baml.fs.open("file2.txt", "r") : baml.fs.File
    let content1 = f1.text() : string
    let content2 = f2.text() : string
    content1 + content2 : string
  }
}
function user.ReadAndClose() -> string throws never {
  { : string
    let f = baml.fs.open("example.txt", "r") : baml.fs.File
    let content = f.text() : string
    f.close() : null
    content : string
  }
}
function user.ReadFileBytes() -> uint8array throws never {
  { : uint8array
    let f = baml.fs.open("binary.dat", "r") : baml.fs.File
    f.bytes() : uint8array
  }
}
function user.ReadFileBytesInline() -> uint8array throws never {
  { : uint8array
    baml.fs.open("image.png", "r").bytes() : uint8array
  }
}
function user.ReadFileBytesAndClose() -> uint8array throws never {
  { : uint8array
    let f = baml.fs.open("binary.dat", "r") : baml.fs.File
    let data = f.bytes() : uint8array
    f.close() : null
    data : uint8array
  }
}
function user.ReadChunk() -> string throws never {
  { : string
    let f = baml.fs.open("log.txt", "r") : baml.fs.File
    f.read(512) : string
  }
}
function user.ReadChunkBytes() -> uint8array throws never {
  { : uint8array
    let f = baml.fs.open("data.bin", "r") : baml.fs.File
    f.read_bytes(4096) : uint8array
  }
}
function user.WriteFile() -> int throws never {
  { : int
    baml.fs.write("output.txt", "hello") : int
  }
}
function user.WriteFileBytes() -> int throws never {
  { : int
    let data = baml.fs.open("source.bin", "r").bytes() : uint8array
    baml.fs.write_bytes("output.bin", data) : int
  }
}
function user.SeekAndRead() -> string throws never {
  { : string
    let f = baml.fs.open("data.txt", "r+") : baml.fs.File
    f.seek_from("start", 10) : int
    f.text() : string
  }
}
function user.FileWrite() -> int throws never {
  { : int
    let f = baml.fs.open("data.txt", "r+") : baml.fs.File
    f.write("hello") : int
  }
}
function user.FileWriteBytes() -> int throws never {
  { : int
    let f = baml.fs.open("data.bin", "r+") : baml.fs.File
    let data = f.bytes() : uint8array
    f.seek_from("start", 0) : int
    f.write_bytes(data) : int
  }
}
function user.Append() -> int throws never {
  { : int
    let f = baml.fs.open("log.txt", "a") : baml.fs.File
    f.write("line\n") : int
  }
}
function user.AppendAndRead() -> string throws never {
  { : string
    let f = baml.fs.open("log.txt", "a+") : baml.fs.File
    f.write("line\n") : int
    f.seek_from("start", 0) : int
    f.text() : string
  }
}
function user.Exists() -> bool throws never {
  { : bool
    baml.fs.exists("maybe.txt") : bool
  }
}
function user.Remove() -> null throws never {
  { : null
    baml.fs.remove("stale.txt") : null
  }
}
function user.Size() -> int throws never {
  { : int
    baml.fs.size("data.bin") : int
  }
}
function user.ReadDir() -> baml.fs.DirEntry[] throws never {
  { : baml.fs.DirEntry[]
    baml.fs.read_dir("some/path") : baml.fs.DirEntry[]
  }
}
function user.AskName() -> string throws never {
  { : string
    baml.io.input("What is your name? ") : string
  }
}
function user.AskNoPrompt() -> string throws never {
  { : string
    baml.io.input(null) : string
  }
}
function user.ConnectAndRead() -> uint8array throws never {
  { : uint8array
    let sock = baml.net.TcpStream.connect("127.0.0.1:8080") : baml.net.TcpStream
    sock.read() : uint8array
  }
}
function user.ConnectAndReadInline() -> uint8array throws never {
  { : uint8array
    baml.net.TcpStream.connect("localhost:3000").read() : uint8array
  }
}
function user.MultipleConnections() -> uint8array throws never {
  { : uint8array
    let s1 = baml.net.TcpStream.connect("server1:80") : baml.net.TcpStream
    let s2 = baml.net.TcpStream.connect("server2:80") : baml.net.TcpStream
    let data1 = s1.read() : uint8array
    let data2 = s2.read() : uint8array
    data1.concat(data2) : uint8array
  }
}
function user.ConnectReadAndClose() -> uint8array throws never {
  { : uint8array
    let sock = baml.net.TcpStream.connect("127.0.0.1:8080") : baml.net.TcpStream
    let data = sock.read() : uint8array
    sock.close() : null
    data : uint8array
  }
}
function user.ListenAndAccept() -> uint8array throws never {
  { : uint8array
    let listener = baml.net.TcpListener.bind("127.0.0.1:0") : baml.net.TcpListener
    let sock = listener.accept() : baml.net.TcpStream
    sock.read() : uint8array
  }
}
function user.UdpRoundtrip() -> uint8array throws never {
  { : uint8array
    let sock = baml.net.UdpSocket.bind("0.0.0.0:0") : baml.net.UdpSocket
    sock.send_to("ping".to_utf8(), "127.0.0.1:9") : int
    let dgram = sock.recv_from() : baml.net.Datagram
    dgram.data : uint8array
  }
}
function user.RunCommand() -> string throws never {
  { : uint8array
    baml.sys.shell("echo hello", null).stdout : uint8array
  }
  !! 84..125: type mismatch: expected string, got uint8array
}
function user.RunCommandWithVar() -> string throws never {
  { : uint8array
    let cmd = "ls -la" : "ls -la" -> string
    baml.sys.shell(cmd, null).stdout : uint8array
  }
  !! 198..230: type mismatch: expected string, got uint8array
}
function user.ChainCommands() -> string throws never {
  { : unknown
    let result1 = baml.sys.shell("pwd", null) : baml.sys.ShellOutput
    let result2 = baml.sys.shell("whoami", null) : baml.sys.ShellOutput
    result1.stdout + " - " + result2.stdout : unknown
  }
  !! 372..394: operator `+` cannot be applied to `uint8array` and `" - "`
}
function user.CheckExitCode() -> int throws never {
  { : int
    baml.sys.shell("exit 42", null).exit_code : int
  }
}
function user.CheckOk() -> bool throws never {
  { : bool
    baml.sys.shell("echo test", null).ok() : bool
  }
}
function user.ExecCommand() -> string throws never {
  { : uint8array
    baml.sys.exec("echo", ["hello"], null).stdout : uint8array
  }
  !! 612..657: type mismatch: expected string, got uint8array
}
function user.ExecWithOptions() -> string throws never {
  { : uint8array
    baml.sys.exec("pwd", null, baml.sys.ProcessOptions { cwd: "/tmp" }).stdout : uint8array
  }
  !! 704..778: type mismatch: expected string, got uint8array
}
