baml_language/crates/baml_tests/snapshots/diagnostic_errors/builtin_io/baml_tests__diagnostic_errors__builtin_io__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0001

  × mismatched types
   ╭─[shell_ops.baml:3:33]
 3 │ ╭─▶ function RunCommand() -> string {
 4 │ │       baml.sys.shell("echo hello", options = null).stdout
 5 │ ├─▶ }
   · ╰──── expected `string`, found `uint8array`
   ╰────

  [type] E0001

  × mismatched types
    ╭─[shell_ops.baml:7:40]
  7 │ ╭─▶ function RunCommandWithVar() -> string {
  8 │ │       let cmd = "ls -la";
  9 │ │       baml.sys.shell(cmd, options = null).stdout
 10 │ ├─▶ }
    · ╰──── expected `string`, found `uint8array`
    ╰────

  [type] E0004

  × operator `+` cannot be applied to `uint8array` and `" - "`
    ╭─[shell_ops.baml:15:5]
 15 │     result1.stdout + " - " + result2.stdout
    ·     ──────────────────────
    ╰────

  [type] E0001

  × mismatched types
    ╭─[shell_ops.baml:26:34]
 26 │ ╭─▶ function ExecCommand() -> string {
 27 │ │       baml.sys.capture("echo", args = ["hello"], options = null).stdout
 28 │ ├─▶ }
    · ╰──── expected `string`, found `uint8array`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[shell_ops.baml:30:38]
 30 │ ╭─▶ function ExecWithOptions() -> string {
 31 │ │       baml.sys.capture("pwd", args = [], options = baml.sys.ProcessOptions { cwd: "/tmp" }).stdout
 32 │ ├─▶ }
    · ╰──── expected `string`, found `uint8array`
    ╰────
